# linksys-velop-watcher

./: .env.example  .gitignore  CLAUDE.md  README.md  SECURITY.md  pyproject.toml  requirements-kafka.txt  run-watcher.sh  sampleoutput.txt
connect/: README.md  install-sinks.sh  restart-sinks.sh  status-sinks.sh  velop-sink-backhaul.json  velop-sink-device.json  velop-sink-ip-neighbor.json  velop-sink-lldp-neighbor.json  velop-sink-nic-counter.json  velop-sink-node.json  velop-sink-ping.json  velop-sink-radio-config.json  velop-sink-radio-stats.json  velop-sink-system.json  velop-sink-wlan-client.json
grafana/: velop.json
sql/: grafana_device_wlan.sql  grafana_ip_neighbors.sql  grafana_nic_rates.sql  grafana_node_wifi.sql  grafana_radio_rates.sql  grafana_wifi_vs_wired.sql  velop_schema.sql
src/velop_watcher/: __init__.py  cli.py  config.py  fetch.py  kafka_sink.py  oui.py  outbox.py  parse.py  schema.py  store.py
systemd/: README.md  install-service.sh  uninstall-service.sh  velop-watcher.env.example  velop-watcher.service  velop-watcher.timer
tests/: test_config.py  test_fetch.py  test_kafka_sink.py  test_oui.py  test_outbox.py  test_parse.py
