[project]
name = "linksys-velop-watcher"
version = "0.1.0"
description = "Fetch and archive Linksys Velop sysinfo.cgi output into CrateDB"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    # Avro/Kafka producer path -- the only sink. Also in requirements-kafka.txt.
    "confluent-kafka[schemaregistry,avro]",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
velop-watcher = "velop_watcher.cli:main"
velop-oui-update = "velop_watcher.oui:update_main"
velop-drain = "velop_watcher.outbox:drain_main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
